# aimed

./: .gitignore  ARCHITECTURE_COVERAGE.md  Dockerfile  README.md  notebook62624fddca.ipynb  pyproject.toml  requirements.txt
RUNTIME_APP/: requirements.txt
RUNTIME_APP/app/: main.py
RUNTIME_APP/demo_client/: demo_client.py
TRAINER_TOOL/: README.md  README_KAGGLE.md  requirements.txt  requirements_kaggle.txt
TRAINER_TOOL/src/: model.py  (+6 more)
app/: cli.py
artifacts/: calibrator.joblib  class_profiles.json  ood_backbone.pt  ood_index.json  prototype_library.json  prototype_model.pt  tower_c.pt
configs/: default.yaml  mock.yaml  runtime_bridge.yaml
docs/: proposed_architecture_source.txt
notebooks/: kaggle_t4x2_train_all.ipynb
runtime/: requirements.txt
runtime_service/: README.md  api.py  create_mock_bundle.py  pack.py  predictor.py  requirements.txt  schemas.py
scripts/: create_mock_artifacts.py  kaggle_commands.txt
src/: build_gallery_refs.py  build_prototypes.py  dataset_images.py  export_onnx.py  losses.py  model.py  train_encoder.py  utils.py
tests/: test_calibrator.py  test_constraint_gate.py  test_fusion.py  test_runtime_pack.py  test_tta.py
trainer/: README.md  build_calibrator.py  build_profiles_and_ood.py  configs_for_calibration.py  ddp_utils.py  export_runtime_bundle.py  export_runtime_pack.py  fullres_dataset.py  fullres_model.py  generate_calibration_signals.py  losses.py  models.py  monitoring_alerts.py  notebook_launcher.py  pair_dataset.py  requirements.txt  train_dino_ssl.py  train_kaggle_fullres.py  train_prototype.py  train_tower.py
(+58 files in other folders)
